<resources>
    <string name="app_name">Edubook</string>
    <string name="title_activity_home">Home</string>
    <string name="large_text">
    </string>
    <string name="action_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="remove_user_from_group">Are you sure you want to remove this user from the group?</string>

    <string name="delete_confirmation">Are you sure you want to delete this post?</string>

    <string name="no_profile_img">this user doesn\'t have profile image</string>

    <string name="yes">Yes</string>

    <string name="like">Like</string>

    <string name="actionIcon">actionIcon</string>

    <string name="unlike">Unlike</string>

    <string name="Comment">Comment</string>

    <string name="share">share</string>

    <string name="Arabic">العربية</string>

    <string name="English">English</string>

    <string name="CurrentPassword">Current Password</string>

    <string name="NewPassword">New Password</string>

    <string name="ConfirmPassword">Confirm Password</string>

    <string name="Connections">Connections</string>

    <string name="Done">Done</string>

    <string name="Starts">Starts:</string>

    <string name="Ends">Ends:</string>

    <string name="AllPosts">All Posts</string>

    <string name="Polls">Polls</string>

    <string name="LibraryItems">Library Items</string>

    <string name="Groups">Groups</string>

    <string name="AccountSettings">Account Settings</string>

    <string name="Language">Language</string>

    <string name="Edit">Edit</string>

    <string name="EmailAddress">Email Address</string>

    <string name="AccessCode">Access Code</string>

    <string name="Next">Next</string>

    <string name="PasswordConfirmation">Password Confirmation</string>

    <string name="Submit">Submit</string>

    <string name="no">No</string>

    <string name="Contributor">Contributor</string>

    <string name="Contributors">Contributors</string>

    <string name="messages">Messages</string>

    <string name="WriteYourNoteHere">Write Your Note Here</string>

    <string name="Notifications">Notifications</string>

    <string name="LockAfterDueDate">Lock after due date</string>

    <string name="AddToMarkBook">Add to mark book</string>

    <string name="Gradebook">Gradebook</string>

    <string name="AddToLibrary">Add to Library</string>

    <string name="DeletePost">Delete Post</string>

    <string name="ParentCode">Parent Code</string>

    <string name="RemoveProfilePicture">Remove Profile Picture</string>

    <string name="RemoveFromGroup">Remove From Group</string>

    <string name="MemberOptions">Member Options</string>

    <string name="SetAllMembersTo">Set all members to:</string>

    <string name="Archived">Archived</string>

    <string name="Active">Active</string>

    <string name="Post">Post</string>

    <string name="Library">Library</string>

    <string name="Members">Members</string>

    <string name="Settings">Settings</string>

    <string name="GroupSettings">Group Settings</string>

    <string name="GroupName">Group Name</string>

    <string name="DescribeGroup">Descripe Your Group</string>

    <string name="Save">Save</string>

    <string name="SearchLibrary">Search Library</string>

    <string name="Name">Name</string>

    <string name="username">Username</string>

    <string name="Password">Password</string>

    <string name="login">Login</string>

    <string name="ForgotPassword">Forgot Password</string>

    <string name="signup">Signup</string>

    <string name="Assignment">Assignment</string>

    <string name="Assignments">Assignments</string>

    <string name="Courses">Courses</string>

    <string name="Logout">Logout</string>

    <string name="Manage">Manage</string>

    <string name="Access">Access</string>

    <string name="ReadOnly">Read Only</string>

    <string name="to">To:</string>

    <string name="AssignmentTitle">Assignment Title</string>

    <string name="AssignmentDesc">Assignment Description</string>

    <string name="Event">Event</string>

    <string name="Events">Events</string>

    <string name="EventTitle">Event Title</string>

    <string name="EventDescription">Event Description</string>

    <string name="Note">Note</string>

    <string name="Cancel">Cancel</string>

    <string name="Students">Students</string>

    <string name="hello_world">Hello world!</string>

    <string name="menu_settings">Settings</string>

    <string name="title_activity_main">Push Notifications</string>

    <string name="error_config">Please set the %1$s constant and recompile the app.</string>

    <string name="already_registered">Device is already registered on server.</string>

    <string name="gcm_registered">From GCM: device successfully registered!</string>

    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>

    <string name="gcm_message">From GCM: you got message!</string>

    <string name="gcm_error">From GCM: error (%1$s).</string>

    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>

    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>

    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>

    <string name="server_registered">From Demo Server: successfully added device!</string>

    <string name="server_unregistered">From Demo Server: successfully removed device!</string>

    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>

    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>

    <string name="options_register">Register</string>

    <string name="options_unregister">Unregister</string>

    <string name="options_clear">Clear</string>

    <string name="options_exit">Exit</string>

    <string name="likes">Likes</string>

    <string name="comments">Comments</string>

    <string name="no_internet">No Internet Connection</string>

    <string name="SOMETHING_WENT_WRONG">Something went wrong!</string>

    <string name="check_inputs">Please check inputs, inputs should be valid inputs, username should be 6 or more letters</string>

    <string name="loading">Loading...</string>

    <string name="total_votes">Total Votes: </string>

    <string name="all_groups">All Groups</string>

    <string name="users">Users</string>

    <string name="groups">Groups</string>

    <string name="only_me">Only me</string>

    <string name="students">Students</string>

    <string name="nill"></string>

    <string name="old_password_equals_new">old password is the same as new password</string>

    <string name="new_password_not_equal_confirmation">new password doesn\'t match the new password confirmation</string>

    <string name="password_length">password length must be more that 6 letters</string>

    <string name="wrong_current_password">current password is wrong!</string>

    <string name="SHOW_MORE">Show More</string>

    <string name="SHOW_LESS">Show Less</string>

    <string name="saved_successfully">Saved Successfully</string>

    <string name="copied_to_clipboard">Copied to clip board</string>

    <string name="removed_successfully">Removed Successfully!</string>

    <string name="camera">Camera</string>

    <string name="galary">Galary</string>

    <string name="cancel">Cancel</string>

    <string name="ALL_GROUPS">All groups</string>

</resources>
