<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:orientation="horizontal"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:src="@drawable/assignment"
        android:id="@+id/assignment" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Assignment"
        android:textColor="#000000"
        android:id="@+id/textView14"
        android:layout_below="@+id/assignment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        >
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:src="@drawable/event"
        android:id="@+id/event" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Event"
        android:id="@+id/textView15"
        android:layout_below="@+id/event"
        android:layout_centerHorizontal="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        >
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:src="@drawable/note"
        android:id="@+id/note" />




    <TextView
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Note"
        android:id="@+id/textView16"
        android:layout_below="@+id/note"
        android:layout_alignLeft="@+id/note"
        android:layout_alignStart="@+id/note" />
    </LinearLayout>
</RelativeLayout>
