<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/new_note_bg"
    android:layout_height="match_parent"
    tools:context="com.edubook.newpost.NewNote">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/background"
        android:layout_gravity="left|top"
        android:id="@+id/relativeLayout5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:onClick="closeActivity"
            android:id="@+id/imageView7"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Event"
            android:id="@+id/textView3"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            style="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Post"
            android:padding="10dp"
            android:onClick="post"
            android:id="@+id/post"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="#58595B"
        android:text="@string/to"
        android:textSize="18sp"
        android:id="@+id/textView9"
        android:layout_below="@+id/relativeLayout5"
        android:layout_alignLeft="@+id/relativeLayout5"
        android:layout_alignStart="@+id/relativeLayout5" />
    <Spinner
        android:layout_width="55dp"
        android:gravity="center_vertical"
        android:id="@+id/recipient"
        android:dropDownWidth="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="-5dp"
        android:layout_toRightOf="@+id/textView9"
        android:layout_alignTop="@+id/recipient_input"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout12" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/note_bg"
        android:id="@+id/relativeLayout6"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout2">

        <EditText
            android:layout_width="wrap_content"
            android:gravity="top"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="10"
            android:ems="10"
            android:hint="@string/EventDescription"
            android:background="#ffffff"
            android:id="@+id/description"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>
    <com.edubook.classes.BoundedLinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:bounded_width="200dp"
        android:layout_height="50dp"

        android:id="@+id/linearLayout12"
        android:layout_below="@+id/relativeLayout5"
        android:layout_toRightOf="@+id/recipient">


        <com.edubook.classes.RightAlignedHorizontalScrollView
            android:layout_width="wrap_content"

            android:minWidth="50dp"

            android:fadeScrollbars="false"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:minHeight="50dp"
            android:id="@+id/tags_view"

            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"

                android:orientation="horizontal"
                android:padding="5dp"
                android:id="@+id/tags_container"
                android:layout_height="match_parent">
            </LinearLayout>
        </com.edubook.classes.RightAlignedHorizontalScrollView>
    </com.edubook.classes.BoundedLinearLayout>
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:lines="1"
        android:inputType="textPersonName"
        android:minWidth="100dp"
        android:background="@color/new_note_bg"
        android:id="@+id/recipient_input"
        android:layout_below="@+id/relativeLayout5"

        android:layout_toRightOf="@+id/linearLayout12"
        android:layout_alignRight="@+id/relativeLayout5"
        android:layout_alignEnd="@+id/relativeLayout5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:background="@drawable/note_bg"
        android:inputType="textPersonName"
        android:hint="@string/EventTitle"
        android:ems="10"
        android:id="@+id/title"
        android:layout_below="@+id/recipient_input"
        android:layout_alignRight="@+id/recipient_input"
        android:layout_alignEnd="@+id/recipient_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">
        <ImageView
            android:layout_width="30dp"
            android:id="@+id/due_date"
            android:onClick="showDueDate"
            android:layout_height="30dp"
            android:layout_marginRight="25dp"
            android:src="@drawable/calendar_grey"
            />
    </LinearLayout>
</RelativeLayout>
