<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.edubook.Login.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittext_bg"
        android:id="@+id/relativeLayout"
        android:layout_marginTop="20dp"
        android:padding="4dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <EditText
            android:layout_width="match_parent"
            android:padding="12dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/background"
            android:layout_toRightOf="@+id/imgPassword"
            android:layout_toEndOf="@+id/imgPassword"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:hint="@string/Password"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/pass"
            android:id="@+id/imgPassword"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/password"
            android:layout_alignBottom="@+id/password" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittext_bg"
        android:id="@+id/relativeLayout3"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <EditText
            android:layout_width="match_parent"
            android:padding="12dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/background"
            android:layout_toRightOf="@+id/imgUsername"
            android:layout_toEndOf="@+id/imgUsername"
            android:inputType="textPassword"
            android:id="@+id/password_confirmation"
            android:hint="@string/PasswordConfirmation"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/pass"
            android:id="@+id/imgUsername"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/password_confirmation"
            android:layout_alignBottom="@+id/password_confirmation" />
    </RelativeLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView2"
        android:src="@drawable/edubook_logo"
        android:layout_marginTop="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn"
        android:layout_marginTop="10dp"
        android:text="@string/Submit"
        android:onClick="submit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="18dp"
        android:textColor="@color/background"
        android:id="@+id/login_btn"
        android:layout_below="@+id/relativeLayout3"
        android:layout_centerHorizontal="true">


    </Button>

</RelativeLayout>
